[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "streamlit>=1.51.0",
]
